--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,7 +4,11 @@ on:
     push:
         branches:
             - main
+        paths:
+            - packages/**/src/*.{ts,js}
     pull_request:
+        paths:
+            - packages/**/src/*.{ts,js}
 
 jobs:
     gh-pages:
@@ -24,13 +28,13 @@ jobs:
               run: yarn
 
             - name: Build libraries
-              run: yarn build:libraries
+              run: yarn build
 
             - name: Generate doc website
               run: yarn docs
 
-            - name: Publish on Github Pages
-              if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+            - if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+              name: Publish on Github Pages
               uses: crazy-max/ghaction-github-pages@v2.5.0
               with:
                   build_dir: docs
