--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
               run: yarn
 
             - name: Build libraries
-              run: yarn build:libraries
+              run: yarn build
 
             - name: Publish packages
               run: yarn version:publish
