--- a/packages/poseidon-proof/package.json
+++ b/packages/poseidon-proof/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@zk-kit/poseidon-proof",
-    "version": "1.0.0-beta",
+    "version": "1.0.0-beta.1",
     "description": "A library to generate and verify Poseidon proofs.",
     "type": "module",
     "license": "MIT",
