--- a/packages/eddsa-poseidon/package.json
+++ b/packages/eddsa-poseidon/package.json
@@ -49,7 +49,7 @@
     },
     "dependencies": {
         "@zk-kit/baby-jubjub": "1.0.0",
-        "@zk-kit/utils": "1.0.0-beta.5",
+        "@zk-kit/utils": "1.0.0",
         "buffer": "6.0.3"
     }
 }
