--- a/packages/poseidon-cipher/package.json
+++ b/packages/poseidon-cipher/package.json
@@ -50,6 +50,6 @@
     },
     "dependencies": {
         "@zk-kit/baby-jubjub": "1.0.0",
-        "@zk-kit/utils": "1.0.0-beta.5"
+        "@zk-kit/utils": "1.0.0"
     }
 }
