--- a/packages/poseidon-proof/package.json
+++ b/packages/poseidon-proof/package.json
@@ -46,7 +46,7 @@
     },
     "dependencies": {
         "@zk-kit/artifacts": "^1.3.1",
-        "@zk-kit/utils": "1.0.0-beta.5",
+        "@zk-kit/utils": "1.0.0",
         "ethers": "^6.12.0",
         "snarkjs": "^0.7.3"
     }
