--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@zk-kit/utils",
-    "version": "1.0.0-beta.5",
+    "version": "1.0.0",
     "description": "Essential zero-knowledge utility library for JavaScript developers.",
     "type": "module",
     "license": "MIT",
