fix(imt-rs): updated th e package.json and updated lib.rs
BREAKING CHANGE: N

re #133

--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "bugs": "https://github.com/privacy-scaling-explorations/zk-kit/issues",
     "private": true,
     "scripts": {
-        "build": "yarn build:libraries && yarn compile:contracts",
-        "build:libraries": "yarn workspaces foreach -t --no-private run build",
-        "compile:contracts": "yarn workspaces foreach run compile",
-        "test": "yarn test:libraries && yarn test:contracts && yarn test:circuits && yarn test:imt-crate",
-        "test:libraries": "jest --coverage",
-        "test:circuits": "yarn workspace @zk-kit/circuits test",
-        "test:contracts": "yarn workspace imt.sol test:coverage",
-        "test:imt-crate": "cd packages/imt-rs && yarn test",
-        "lint": "eslint . --ext .js,.ts && yarn workspace imt.sol lint",
-        "prettier": "prettier -c .",
-        "prettier:write": "prettier -w .",
+        "_build": "yarn workspaces foreach -A -t --no-private run build",
+        "build": "turbo _build",
+        "_test": "jest --coverage",
+        "test": "turbo _test",
+        "test:library": "jest packages/${0}",
+        "test:rust": "cd packages/imt-rs && yarn test",
+        "version:bump": "yarn workspace @zk-kit/${0} version ${1} && yarn remove:stable-version-field ${0} && NO_HOOK=1 git commit -am \"chore(${0}): v${1}\" && git tag ${0}-v${1}",
+        "version:publish": "yarn workspaces foreach -A --no-private npm publish --tolerate-republish --access public",
+        "version:release": "changelogithub",
+        "lint:eslint": "eslint . --ext .js,.ts",
+        "lint": "turbo lint:eslint",
+        "format:prettier": "prettier -c .",
+        "format:prettier:write": "prettier -w .",
+        "format": "turbo format:prettier",
+        "format:write": "turbo format:prettier:write",
         "benchmarks": "rimraf benchmarks/results && ts-node benchmarks/index.ts",
         "docs": "typedoc --cname zkkit.pse.dev --githubPages true",
         "remove:stable-version-field": "ts-node scripts/remove-stable-version-field.ts ${0} && yarn format:prettier:write",
