--- a/packages/poseidon/package.json
+++ b/packages/poseidon/package.json
@@ -126,6 +126,6 @@
     },
     "dependencies": {
         "@noble/curves": "1.4.0",
-        "@zk-kit/utils": "1.0.0-beta"
+        "@zk-kit/utils": "1.2.0"
     }
 }
