--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "build": "turbo _build",
         "_test": "jest --coverage",
         "test": "turbo _test",
-        "test:library": "jest packages/${0}",
+        "test:library": "jest --coverage packages/${0}",
         "version:bump": "yarn workspace @zk-kit/${0} version ${1} && yarn remove:stable-version-field ${0} && NO_HOOK=1 git commit -am \"chore(${0}): v${1}\" && git tag ${0}-v${1}",
         "version:publish": "yarn workspaces foreach -A --no-private npm publish --tolerate-republish --access public",
         "version:release": "changelogithub",
