docs: update repo readme and codeowners files
re #307

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -14,3 +14,4 @@
 /packages/poseidon-proof/ @cedoor @vplasencia @0xjei
 /packages/imt/ @cedoor
 /packages/utils/ @cedoor @artwyman
+/packages/logical-expressions/ @vplasencia
