--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
         "rimraf": "^5.0.5",
+        "rollup-plugin-dts": "^6.1.1",
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "tslib": "^2.6.2",
