--- a/packages/eddsa-poseidon/package.json
+++ b/packages/eddsa-poseidon/package.json
@@ -8,10 +8,10 @@
     "unpkg": "dist/index.iife.min.js",
     "jsdelivr": "dist/index.iife.min.js",
     "main": "dist/index.js",
-    "types": "dist/types/index.d.ts",
+    "types": "dist/index.d.ts",
     "exports": {
         ".": {
-            "types": "./dist/types/index.d.ts",
+            "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "default": "./dist/index.js"
         }
@@ -45,6 +45,7 @@
         "rimraf": "^5.0.5",
         "rollup": "^4.12.0",
         "rollup-plugin-cleanup": "^3.2.1",
+        "rollup-plugin-dts": "^6.1.1",
         "rollup-plugin-polyfill-node": "^0.13.0"
     },
     "dependencies": {
