--- a/packages/lazytower/package.json
+++ b/packages/lazytower/package.json
@@ -8,10 +8,10 @@
     "unpkg": "dist/index.iife.min.js",
     "jsdelivr": "dist/index.iife.min.js",
     "main": "dist/index.js",
-    "types": "dist/types/index.d.ts",
+    "types": "dist/index.d.ts",
     "exports": {
         ".": {
-            "types": "./dist/types/index.d.ts",
+            "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "default": "./dist/index.js"
         }
@@ -41,7 +41,8 @@
         "@rollup/plugin-typescript": "^11.1.6",
         "rimraf": "^5.0.5",
         "rollup": "^4.12.0",
-        "rollup-plugin-cleanup": "^3.2.1"
+        "rollup-plugin-cleanup": "^3.2.1",
+        "rollup-plugin-dts": "^6.1.1"
     },
     "dependencies": {
         "poseidon-lite": "^0.2.0"
