--- a/packages/poseidon-proof/package.json
+++ b/packages/poseidon-proof/package.json
@@ -5,10 +5,10 @@
     "type": "module",
     "license": "MIT",
     "main": "dist/index.browser.js",
-    "types": "dist/types/index.d.ts",
+    "types": "dist/index.d.ts",
     "exports": {
         ".": {
-            "types": "./dist/types/index.d.ts",
+            "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "default": "./dist/index.js"
         }
@@ -42,7 +42,8 @@
         "poseidon-lite": "^0.2.0",
         "rimraf": "^5.0.5",
         "rollup": "^4.12.0",
-        "rollup-plugin-cleanup": "^3.2.1"
+        "rollup-plugin-cleanup": "^3.2.1",
+        "rollup-plugin-dts": "^6.1.1"
     },
     "dependencies": {
         "@zk-kit/artifacts": "1.8.0",
