--- a/packages/smt/package.json
+++ b/packages/smt/package.json
@@ -13,10 +13,10 @@
     "unpkg": "dist/index.iife.min.js",
     "jsdelivr": "dist/index.iife.min.js",
     "main": "dist/index.js",
-    "types": "dist/types/index.d.ts",
+    "types": "dist/index.d.ts",
     "exports": {
         ".": {
-            "types": "./dist/types/index.d.ts",
+            "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "default": "./dist/index.js"
         }
@@ -50,6 +50,7 @@
         "crypto-js": "^4.1.1",
         "rimraf": "^5.0.5",
         "rollup": "^4.12.0",
-        "rollup-plugin-cleanup": "^3.2.1"
+        "rollup-plugin-cleanup": "^3.2.1",
+        "rollup-plugin-dts": "^6.1.1"
     }
 }
