test(benchmarks): improve bechmarks to have complete performance data
- Added Sparse Merkle Tree to the benchmark suites to complete the available merkle tree
implementations in zk-kit.

- Added operation to the benchmark suites (proof generation, proof verification, update, delete

- Changed the "imt.ts" name to "benchmark-merkle-trees.ts"

- Added README.md documentation about the benchmark suite

- Added log managment with winston library to handle any error produced during the benchmark
withtout break the benchmark execution

re #311

--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
         "rimraf": "^5.0.5",
+        "to-hex": "^0.0.18",
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "tslib": "^2.6.2",
         "turbo": "^1.13.2",
         "typedoc": "^0.25.8",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "winston": "^3.14.2"
     }
 }
