feat(eddsa-poseidon): adds Blake2s hashing for eddsa and conditional imports
Currently EdDSA Poseidon hashes using Blake 1, which is now outdated. This commit swaps the default
hashing algorithm for Blake2, whilst also introducing conditional imports so the user can specify
the underlying hashing algorithm if required.

BREAKING CHANGE: n

--- a/packages/eddsa-poseidon/package.json
+++ b/packages/eddsa-poseidon/package.json
@@ -14,6 +14,11 @@
             "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "default": "./dist/index.js"
+        },
+        "./blake-1": {
+            "types": "./dist/types/blake1.d.ts",
+            "require": "./dist/lib.commonjs/blake1.cjs",
+            "default": "./dist/esm/blake1.js"
         }
     },
     "files": [
