feat(eddsa-poseidon): removes implementation of blake2b in favour of the blakejs library
BREAKING CHANGE: n

--- a/packages/eddsa-poseidon/package.json
+++ b/packages/eddsa-poseidon/package.json
@@ -61,6 +61,7 @@
     "dependencies": {
         "@zk-kit/baby-jubjub": "1.0.3",
         "@zk-kit/utils": "1.2.1",
+        "blakejs": "^1.2.1",
         "buffer": "6.0.3"
     }
 }
