--- a/packages/eddsa-poseidon/package.json
+++ b/packages/eddsa-poseidon/package.json
@@ -16,14 +16,14 @@
             "default": "./dist/index.js"
         },
         "./blake-1": {
-            "types": "./dist/types/eddsa-poseidon-blake-1.ts",
+            "types": "./dist/index.d.ts",
             "require": "./dist/lib.commonjs/eddsa-poseidon-blake-1.cjs",
             "default": "./dist/esm/eddsa-poseidon-blake-1.js"
         },
         "./blake-2b": {
-            "types": "./dist/types/eddsa-poseidon-blake-2.d.ts",
-            "require": "./dist/lib.commonjs/eddsa-poseidon-blake-2.cjs",
-            "default": "./dist/esm/eddsa-poseidon-blake-1.js"
+            "types": "./dist/index.d.ts",
+            "require": "./dist/lib.commonjs/eddsa-poseidon-blake-2b.cjs",
+            "default": "./dist/esm/eddsa-poseidon-blake-2b.js"
         }
     },
     "files": [
