test(benchmarks): improve bechmarks to have complete performance data (#326)
* test(benchmarks): improve bechmarks to have complete performance data

- Added Sparse Merkle Tree to the benchmark suites to complete the available merkle tree
implementations in zk-kit.

- Added operation to the benchmark suites (proof generation, proof verification, update, delete

- Changed the "imt.ts" name to "benchmark-merkle-trees.ts"

- Added README.md documentation about the benchmark suite

- Added log managment with winston library to handle any error produced during the benchmark
withtout break the benchmark execution

re #311

* fix(benchmarks): remove package winston and to-hex libraries to fix validation issues in GH

remove package winston and to-hex libraries to fix validation issues in GH

re #311

* docs(benchmarks): added benchmarks summary

Added benchmarks summary tables for different sizes of samples

and conclusion ideas

re # 311

* Update benchmarks/README.md

Co-authored-by: sripwoud <dev+github@sripwoud.xyz>

* Update benchmarks/benchmark-merkle-trees.ts

Co-authored-by: sripwoud <dev+github@sripwoud.xyz>

* Update benchmarks/README.md

Co-authored-by: sripwoud <dev+github@sripwoud.xyz>

* Update benchmarks/benchmark-merkle-trees.ts

Co-authored-by: sripwoud <dev+github@sripwoud.xyz>

* Update benchmarks/README.md

Co-authored-by: sripwoud <dev+github@sripwoud.xyz>

* refactor(benchmarks): added winston to package.json and refactored index.ts

Added winston to package.json and refactored index.ts to

run the samples with a loop managed by an array

re #311

* Update benchmarks/benchmark-merkle-trees.ts

Co-authored-by: sripwoud <dev+github@sripwoud.xyz>

* fix(benchmarks): added counter initialization mistake

Changed to initialize from -1 instead of 0 to fix the logic to start from the first

samples element

re #311

* docs(benchmarks): changed the usage instructions to point the exisitin script

Change the usage instructions of benchmarks from the npx comman

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "tslib": "^2.6.2",
         "turbo": "^1.13.2",
         "typedoc": "^0.25.8",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "winston": "^3.14.2"
     }
 }
