docs: add paper download link to readme files
Now it is easier to download the paper pdf.

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-    "**/*.{js,ts,jsx,tsx,md,json,yml,yaml}": "prettier --write",
+    "**/*.{js,ts,jsx,tsx,md,json,yml,yaml}": "yarn prettier --write",
     "**/*.{js,ts,jsx,tsx}": "eslint"
 }
