feat(eddsa-poseidon): adds Blake2s hashing for eddsa and conditional imports (#329)
* feat(eddsa-poseidon): adds Blake2s hashing for eddsa and conditional imports

Currently EdDSA Poseidon hashes using Blake 1, which is now outdated. This commit swaps the default
hashing algorithm for Blake2, whilst also introducing conditional imports so the user can specify
the underlying hashing algorithm if required.

BREAKING CHANGE: n

* feat(eddsa-poseidon): clean up code

re 152

* feat(eddsa-poseidon): fix exports

* feat(eddsa-poseidon): update comments

* refactor(eddsa-poseidon): makes the blake algorithms implement the hash function interface

* feat(eddsa-poseidon): removes implementation of blake2b in favour of the blakejs library

BREAKING CHANGE: n

* refactor(eddsa-poseidon): simplifies the input types for the hash functions

re #152

* refactor(eddsa-poseidon): removes to hex function in favour of zk-kit bufferToHexadecimal

re #152

* fix(eddsa-poseidon): change the default import back to blake1 and fix the export files

re 152

* docs(eddsa-poseidon): update comments

re 152

* refactor(eddsa-poseidon): unifies both algorithms to use default exports

re 152

* refactor(eddsa-poseidon): use imported buffer type instead of the default

re #152

* fix(eddsa-poseidon): throw an error if unsupported algorithm is chosen"

BREAKING CHANGE: n

re #51

* refactor(eddsa-poseidon): rename test file

re #152

---------

Co-authored-by: Cedoor <me@cedoor.dev>

--- a/packages/eddsa-poseidon/package.json
+++ b/packages/eddsa-poseidon/package.json
@@ -14,6 +14,16 @@
             "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "default": "./dist/index.js"
+        },
+        "./blake-1": {
+            "types": "./dist/index.d.ts",
+            "require": "./dist/lib.commonjs/eddsa-poseidon-blake-1.cjs",
+            "default": "./dist/esm/eddsa-poseidon-blake-1.js"
+        },
+        "./blake-2b": {
+            "types": "./dist/index.d.ts",
+            "require": "./dist/lib.commonjs/eddsa-poseidon-blake-2b.cjs",
+            "default": "./dist/esm/eddsa-poseidon-blake-2b.js"
         }
     },
     "files": [
@@ -50,6 +60,7 @@
     "dependencies": {
         "@zk-kit/baby-jubjub": "1.0.3",
         "@zk-kit/utils": "1.2.1",
+        "blakejs": "^1.2.1",
         "buffer": "6.0.3",
         "poseidon-lite": "0.3.0"
     }
