--- a/packages/eddsa-poseidon/package.json
+++ b/packages/eddsa-poseidon/package.json
@@ -60,6 +60,7 @@
     "dependencies": {
         "@zk-kit/baby-jubjub": "1.0.3",
         "@zk-kit/utils": "1.2.1",
+        "blake-hash": "^2.0.0",
         "blakejs": "^1.2.1",
         "buffer": "6.0.3",
         "poseidon-lite": "0.3.0"
