--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,17 +1,16 @@
 # These owners will be the default owners for everything in the repo.
 # They will be added as reviewers for PR related to configuration files.
-*       @cedoor @sripwoud
+* @vplasencia
 
 # When someone opens a pull request that only modifies specific packages,
 # only the following users and not the default owners defined above will be
 # requested for a review.
-/packages/baby-jubjub/ @cedoor @artwyman
-/packages/eddsa-poseidon/ @cedoor @artwyman
-/packages/imt/ @cedoor
+/packages/baby-jubjub/ @vplasencia @artwyman
+/packages/eddsa-poseidon/ @vplasencia @artwyman
+/packages/imt/ @vplasencia
 /packages/lazytower/ @LCamel
-/packages/lean-imt/ @cedoor @vplasencia
+/packages/lean-imt/ @vplasencia
 /packages/poseidon-cipher/ @ctrlc03
-/packages/poseidon-proof/ @cedoor @vplasencia @0xjei
-/packages/imt/ @cedoor
-/packages/utils/ @cedoor @artwyman
+/packages/poseidon-proof/ @vplasencia
+/packages/utils/ @vplasencia @artwyman
 /packages/logical-expressions/ @vplasencia
