--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "format": "turbo format:prettier",
         "format:write": "turbo format:prettier:write",
         "benchmarks": "rimraf benchmarks/results && ts-node benchmarks/index.ts",
-        "docs": "typedoc --cname zkkit.pse.dev --githubPages true",
+        "docs": "typedoc",
         "remove:stable-version-field": "ts-node scripts/remove-stable-version-field.ts ${0} && yarn format:prettier:write",
         "precommit": "lint-staged",
         "postinstall": "husky && git config --local core.editor cat",
